2012-09-10 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Moved BE module to Extbase, resolves #40804

2011-03-08 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 2.0.0

2011-03-02 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added BE module to test connector services

2011-01-06 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added utility method for XML to PHP array conversion, resolves #11794

2010-04-27 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added a post-processing method to the API
	* Moved sv1 service class to "base" class
	* Released version 1.1.0

2009-10-20 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Removed unneeded registration of (empty) base service
	* Raised status to stable
	* Released version 1.0.0

2009-01-16 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 0.4.0

2008-07-20 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added hook examples
	* Added manual
	* Completed API
	* Raised status to beta

2008-04-28 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* First public release